# SyntaxAnalyzer

./: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  FileReader.cpp  FileReader.h  Lexer  Main.cpp  Makefile  README.md  Scanner.cpp  Scanner.h  Token.cpp  Token.h  lexer.cpp  sample.txt
Prototype/: CMakeLists.txt  LimitationsAndFutureFeature.md  NameTable.md  todo.md
Prototype/include/: AstPrinter.h  Environment.h  Expr.h  Interpreter.h  Lox.h  LoxCallable.h  LoxClass.h  LoxFunction.h  LoxInstance.h  Parser.h  Resolver.h  Return.h  RuntimeError.h  Scanner.h  Stmt.h  Token.h  TokenType.h
Prototype/src/: Parser.cpp  Scanner.cpp  Token.cpp
docs/: dconfig
docs/html/: ErrorHandler_8h_source.html  FileReader_8h_source.html  Scanner_8h_source.html  Token_8h_source.html  annotated.html  classErrorHandler-members.html  classErrorHandler.html  classFileReader-members.html  classFileReader.html  classScanner-members.html  classScanner.html  classToken-members.html  classToken.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  structErrorHandler_1_1ErrorInfo-members.html  structErrorHandler_1_1ErrorInfo.html  structErrorHandler_1_1ErrorInfo__coll__graph.map  structErrorHandler_1_1ErrorInfo__coll__graph.md5
docs/latex/: annotated.tex  classScanner.tex  (+14 more)
include/: ErrorHandler.h  FileReader.h  Scanner.h  Token.h
requirements/: requirements.md  todo.md
src/: ErrorHandler.cpp  FileReader.cpp  Lexer  Main.cpp  Makefile  Scanner.h  Token.cpp  Token.h  sample.txt
(+21 files in other folders)
